samples/_failures_safe/1761285462_bbc0d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_212d68f9.c: In function ‘main’:
./samples/SAFE/__tmp_212d68f9.c:152:13: error: expected expression at end of input
  152 |             if (
      |             ^~
./samples/SAFE/__tmp_212d68f9.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_212d68f9.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_212d68f9.c:152:13: error: expected declaration or statement at end of input
